[word2vec] v002: Cleanup word2vec.py and increase number of epochs

--- a/word2vec/training.ipynb
+++ b/word2vec/training.ipynb
@@ -22,6 +22,7 @@
    },
    "outputs": [],
    "source": [
+    "import logging\n",
     "import tensorflow as tf\n",
     "from word2vec import Word2Vec"
    ]
@@ -34,12 +35,19 @@
    },
    "outputs": [],
    "source": [
+    "reload(logging)\n",
+    "logging_filename = \"training.log\"\n",
+    "logging.basicConfig(format = \"[%(asctime)s] %(message)s\",\n",
+    "                    datefmt = \"%Y-%m-%d %H:%M:%S\",\n",
+    "                    level = logging.INFO,\n",
+    "                    filename = logging_filename)\n",
+    "\n",
     "sess = tf.InteractiveSession()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -48,28 +56,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval analogy file: questions-words.txt\n",
-      "Questions: 17827\n",
-      "Skipped: 1717\n",
       "Training data file: text8\n",
       "Vocabulary size: 71290 + UNK\n",
-      "Words per epoch: 17005207\n",
-      "Most frequent words: [[('UNK', 286363), ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764), ('in', 372201), ('a', 325873), ('to', 316376), ('zero', 264975), ('nine', 250430)]]\n"
+      "Most frequent words: [[('UNK', 286363), ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764), ('in', 372201), ('a', 325873), ('to', 316376), ('zero', 264975), ('nine', 250430)]]\n",
+      "Analogy questions used: 17827 skipped: 1717\n"
      ]
     }
    ],
    "source": [
     "# Create a model.\n",
     "training_data_filename = \"text8\"\n",
-    "epochs_to_train = 15\n",
-    "model = Word2Vec(sess, training_data_filename, epochs_to_train = epochs_to_train)\n",
-    "model.read_analogy_questions(\"questions-words.txt\")\n",
+    "training_results_path = \"training-results\"\n",
+    "analogy_questions_filename = \"questions-words.txt\"\n",
+    "epochs_to_train = 30\n",
+    "model = Word2Vec(sess, \n",
+    "                 for_training = True,\n",
+    "                 training_data_filename = training_data_filename,\n",
+    "                 training_results_path = training_results_path,\n",
+    "                 analogy_questions_filename = analogy_questions_filename,\n",
+    "                 epochs_to_train = epochs_to_train)\n",
     "\n",
     "# Print some statistics.\n",
     "print \"Training data file:\", training_data_filename\n",
     "print \"Vocabulary size:\", len(model.words) - 1, \"+ UNK\"\n",
-    "print \"Words per epoch:\", model.words_per_epoch\n",
-    "print \"Most frequent words:\", [zip(model.words, model.word_freq)[:10]]"
+    "print \"Most frequent words:\", [zip(model.words, model.word_freq)[:10]]\n",
+    "print \"Analogy questions used:\", len(model.analogy_questions), \"skipped:\", model.num_analogy_questions_skipped"
    ]
   },
   {
@@ -80,9 +91,9 @@
    },
    "outputs": [],
    "source": [
-    "summary_writer = tf.train.SummaryWriter(\"training-results\", sess.graph)\n",
-    "for _ in xrange(epochs_to_train):\n",
-    "    model.train(summary_writer, \"training-results\")"
+    "for epoch in xrange(epochs_to_train):\n",
+    "    model.train()\n",
+    "    logging.info(\"Epoch %d, Analogy accuracy: %f\", epoch+1, model.evaluate_analogy())"
    ]
   }
  ],
