[slim] Fine-tuning a pre-trained model in train_flowers.ipynb

--- a/slim/train_flowers.ipynb
+++ b/slim/train_flowers.ipynb
@@ -38,7 +38,7 @@
     "home_dir = os.path.expanduser('~')\n",
     "base_data_dir = os.path.join(home_dir, \"data/flowers\")\n",
     "dataset_dir = os.path.join(base_data_dir, \"tfrecords\")\n",
-    "train_dir = os.path.join(base_data_dir, \"train_logs/v003\")\n",
+    "train_dir = os.path.join(base_data_dir, \"train_logs/v006\")\n",
     "\n",
     "# Training flags.\n",
     "batch_size = 32\n",
@@ -48,8 +48,8 @@
     "log_every_n_steps = 10\n",
     "\n",
     "# Used for pre-training.\n",
-    "checkpoint_path = None\n",
-    "checkpoint_exclude_scopes = None\n",
+    "checkpoint_path = \"/home/ubuntu/data/flowers/pretrained-models/inception_v1.ckpt\"\n",
+    "checkpoint_exclude_scopes = \"InceptionV1/Logits\"\n",
     "ignore_missing_vars = False"
    ]
   },
